--- a/EstructurasArchivos/EstructurasArchivos.csproj
+++ b/EstructurasArchivos/EstructurasArchivos.csproj
@@ -61,7 +61,6 @@
     </Compile>
     <Compile Include="Atributo.cs" />
     <Compile Include="Entidad.cs" />
-    <Compile Include="File.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,7 +79,7 @@
     <Compile Include="IndiceSecundario.Designer.cs">
       <DependentUpon>IndiceSecundario.cs</DependentUpon>
     </Compile>
-    <Compile Include="NodoArbol.cs" />
+    <Compile Include="Nodo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ArbolPrimario.resx">
@@ -107,6 +106,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
